# HHbbWWAnalysis

./: .BaseHHtobbWW.py.swp  .BaseHHtobbWWSL.py.swp  .gitmodules  BaseHHtobbWW.py  BaseHHtobbWWSL.py  BtagEffAndMistag.py  BtagReweightingRatio.py  DDHelper.py  HHtobbWW.py  HighMass_resubmit.sh  JPA.py  LowMass_resubmit.sh  METScripts.py  PlotterHHtobbWW.py  PlotterHHtobbWWDL.py  PlotterHHtobbWWSL.py  PlotterHHtobbWWSLbasic.py  README.md  SignalReweightingHistogram.py  SkimmerHHtobbWW.py  SkimmerHHtobbWWBasicSL.py  SkimmerHHtobbWWDL.py  SkimmerHHtobbWWHME.py  SkimmerHHtobbWWSL.py  SkimmerHHtobbWWSLbasic.py  SkimmerHHtobbWWSLbasicReco.py  SkimmerMEMHHtobbWWDL.py  Stitching.py  TransferFunctionNanoAOD.py  analysis2016.yml  analysis2016SL_v6.yml  analysis2016SL_v7.yml  analysis2016SL_v7_MC.yml  analysis2016_MC.yml  analysis2016_SL.yml  analysis2016_SL_signal_Radion.yml  analysis2016_signal_Graviton.yml  analysis2016_signal_Radion.yml  analysis2016_synchro.yml  analysis2016_test.yml  (+113 more)
BtagStudy/: ComputeBtagEff.py  ComputeBtagEffAndMistagRate.py  ComputeBtagReweightingRatio.py  Recipe.txt
DYStudy/: CDFShift.py  DNNOutputDY_DNN01_2016.yml  DNNOutputDY_DNN01_2017.yml  DNNOutputDY_DNN01_2018.yml  DNNOutputDY_DNN02_2016.yml  DNNOutputDY_DNN02_2017.yml  DNNOutputDY_DNN02_2018.yml  DNNOutputDY_DNN03_2016.yml  DNNOutputDY_DNN03_2017.yml  DNNOutputDY_DNN03_2018.yml  DNNOutputDY_DNN04_2016.yml  DNNOutputDY_DNN04_2017.yml  DNNOutputDY_DNN04_2018.yml  (+103 more)
HMEStudy/: CMakeLists.txt  HME.h  README.md  runHME.py
HMEStudy/include/: HME.h  Reader.h
HMEStudy/src/: HME.cc  Reader.cc
(+9332 files in other folders)
